--- a/.github/workflows/publish-npmjs.yaml
+++ b/.github/workflows/publish-npmjs.yaml
@@ -12,6 +12,7 @@ jobs:
             - uses: actions/setup-node@v1
               with:
                   node-version: '18.x'
+                  registry-url: 'https://registry.npmjs.org'
             - run: npm install
             - run: npm run ci:lint
             - run: npm run ci:build-libs
