--- a/projects/ppwcode/ng-async/package.json
+++ b/projects/ppwcode/ng-async/package.json
@@ -5,7 +5,8 @@
         "@angular/common": "^16.2.0",
         "@angular/core": "^16.2.0",
         "@ng-matero/extensions": "16.1.0",
-        "@ngx-translate/core": "^15.0.0"
+        "@ngx-translate/core": "^15.0.0",
+        "@ppwcode/ng-common-components": "^0.0.4"
     },
     "dependencies": {
         "tslib": "^2.3.0"
