--- a/projects/ppwcode/ng-wireframe/package.json
+++ b/projects/ppwcode/ng-wireframe/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.4",
     "peerDependencies": {
         "@angular/common": "^16.2.0",
-        "@angular/core": "^16.2.0"
+        "@angular/core": "^16.2.0",
+        "@ppwcode/ng-async": "^0.0.4"
     },
     "dependencies": {
         "tslib": "^2.3.0"
