Add table component to ng-common-components

--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
         "@angular/platform-browser": "16.2.3",
         "@angular/platform-browser-dynamic": "16.2.3",
         "@angular/router": "16.2.3",
+        "@js-joda/core": "5.5.3",
+        "@js-joda/extra": "0.11.3",
+        "@js-joda/locale": "4.8.10",
+        "@js-joda/timezone": "2.18.0",
+        "@types/luxon": "3.3.2",
         "@ng-matero/extensions": "16.1.0",
         "@ngx-translate/core": "15.0.0",
         "@ngx-translate/http-loader": "8.0.0",
+        "date-fns": "2.30.0",
+        "luxon": "3.4.3",
         "rxjs": "7.8.1",
         "tslib": "2.5.3",
         "zone.js": "0.13.1"
