--- a/projects/ppwcode/ng-wireframe/package.json
+++ b/projects/ppwcode/ng-wireframe/package.json
@@ -1,10 +1,10 @@
 {
     "name": "@ppwcode/ng-wireframe",
-    "version": "0.0.6",
+    "version": "0.",
     "peerDependencies": {
         "@angular/common": "^16.2.0",
         "@angular/core": "^16.2.0",
-        "@ppwcode/ng-async": "^0.0.6"
+        "@ppwcode/ng-async": "^0.0.7"
     },
     "dependencies": {
         "tslib": "^2.3.0"
