--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "16.2.3",
-        "@angular/cdk": "~16.2.2",
+        "@angular/cdk": "16.2.3",
         "@angular/common": "16.2.3",
         "@angular/compiler": "16.2.3",
         "@angular/core": "16.2.3",
         "@angular/forms": "16.2.3",
-        "@angular/material": "16.2.2",
+        "@angular/material": "16.2.3",
         "@angular/platform-browser": "16.2.3",
         "@angular/platform-browser-dynamic": "16.2.3",
         "@angular/router": "16.2.3",
@@ -52,7 +52,7 @@
         "@typescript-eslint/parser": "5.62.0",
         "concurrently": "8.2.1",
         "cross-env": "7.0.3",
-        "eslint": "^8.47.0",
+        "eslint": "8.49.0",
         "jasmine-core": "4.6.0",
         "karma": "6.4.2",
         "karma-chrome-launcher": "3.2.0",
