--- a/package.json
+++ b/package.json
@@ -64,5 +64,10 @@
         "prettier": "2.8.8",
         "prettier-config-standard": "5.0.0",
         "typescript": "5.1.6"
+    },
+    "overrides": {
+        "deep-equal": {
+            "regexp.prototype.flags": "npm:regexp.prototype.flags@1.5.0"
+        }
     }
 }
