--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@ngx-translate/http-loader": "8.0.0",
         "@ppwcode/js-ts-oddsandends": "1.4.2",
         "date-fns": "2.30.0",
-        "file-saver": "2.0.5",
+        "file-saver-es": "2.0.5",
         "luxon": "3.4.3",
         "rxjs": "7.8.1",
         "tslib": "2.5.3",
@@ -49,7 +49,7 @@
         "@angular-eslint/template-parser": "16.1.2",
         "@angular/cli": "16.2.1",
         "@angular/compiler-cli": "16.2.3",
-        "@types/file-saver": "2.0.5",
+        "@types/file-saver-es": "2.0.1",
         "@types/jasmine": "4.3.5",
         "@typescript-eslint/eslint-plugin": "5.62.0",
         "@typescript-eslint/parser": "5.62.0",
