--- a/projects/ppwcode/ng-async/package.json
+++ b/projects/ppwcode/ng-async/package.json
@@ -6,7 +6,7 @@
         "@angular/core": "^16.2.0",
         "@ng-matero/extensions": "16.1.0",
         "@ngx-translate/core": "^15.0.0",
-        "file-saver": "^2.0.5",
+        "file-saver-es": "^2.0.5",
         "@ppwcode/js-ts-oddsandends": "^1.4.2",
         "@ppwcode/ng-common-components": "^0.0.26"
     },
