--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,10 +6,11 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
+                  cache: 'npm'
             - run: npm install
             - run: npm run ci:lint
             - run: npm run ci:build-libs
