--- a/.github/workflows/publish-npmjs.yaml
+++ b/.github/workflows/publish-npmjs.yaml
@@ -8,10 +8,11 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v3
               with:
                   node-version: '18.x'
+                  cache: 'npm'
                   registry-url: 'https://registry.npmjs.org'
             - run: npm install
             - run: npm run ci:lint
