--- a/projects/ppwcode/ng-forms/package.json
+++ b/projects/ppwcode/ng-forms/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.55",
     "peerDependencies": {
         "@angular/common": "^16.2.0 || ^17.0.0",
-        "@angular/core": "^16.2.0 || ^17.0.0"
+        "@angular/core": "^16.2.0 || ^17.0.0",
+        "@ppwcode/ng-common": "^0.0.55"
     },
     "dependencies": {
         "tslib": "^2.3.0"
