--- a/.github/workflows/publish-npmjs.yaml
+++ b/.github/workflows/publish-npmjs.yaml
@@ -39,6 +39,9 @@ jobs:
             - run: npm publish dist/ppwcode/ng-state-management --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+            - run: npm publish dist/ppwcode/ng-unit-testing --access public
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
             - run: npm publish dist/ppwcode/ng-wireframe --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
