--- a/angular.json
+++ b/angular.json
@@ -446,6 +446,40 @@
               }
             }
           }
+        },
+        "@ppwcode/ng-unit-testing": {
+          "projectType": "library",
+          "root": "projects/ppwcode/ng-unit-testing",
+          "sourceRoot": "projects/ppwcode/ng-unit-testing/src",
+          "prefix": "lib",
+          "architect": {
+            "build": {
+              "builder": "@angular-devkit/build-angular:ng-packagr",
+              "options": {
+                "project": "projects/ppwcode/ng-unit-testing/ng-package.json"
+              },
+              "configurations": {
+                "production": {
+                  "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.lib.prod.json"
+                },
+                "development": {
+                  "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.lib.json"
+                }
+              },
+              "defaultConfiguration": "production"
+            },
+            "test": {
+              "builder": "@angular-devkit/build-angular:karma",
+              "options": {
+                "karmaConfig": "karma.conf.js",
+                "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.spec.json",
+                "polyfills": [
+                  "zone.js",
+                  "zone.js/testing"
+                ]
+              }
+            }
+          }
         }
     },
     "cli": {
