--- a/projects/ppwcode/ng-async/package.json
+++ b/projects/ppwcode/ng-async/package.json
@@ -2,9 +2,9 @@
     "name": "@ppwcode/ng-async",
     "version": "0.0.64",
     "peerDependencies": {
-        "@angular/common": "^16.2.0 || ^17.0.0",
-        "@angular/core": "^16.2.0 || ^17.0.0",
-        "@ng-matero/extensions": "16.1.0",
+        "@angular/common": "^17.0.0",
+        "@angular/core": "^17.0.0",
+        "@ng-matero/extensions": "17.0.0",
         "@ngx-translate/core": "^15.0.0",
         "file-saver-es": "^2.0.5",
         "@ppwcode/js-ts-oddsandends": "^1.4.2",
