--- a/projects/ppwcode/ng-forms/package.json
+++ b/projects/ppwcode/ng-forms/package.json
@@ -2,8 +2,8 @@
     "name": "@ppwcode/ng-forms",
     "version": "0.0.64",
     "peerDependencies": {
-        "@angular/common": "^16.2.0 || ^17.0.0",
-        "@angular/core": "^16.2.0 || ^17.0.0",
+        "@angular/common": "^17.0.0",
+        "@angular/core": "^17.0.0",
         "@ppwcode/ng-common": "^0.0.64"
     },
     "dependencies": {
