[17->18] Update packages using Angular CLI
npx @angular/cli@latest update @angular-eslint/schematics @angular/cdk @angular/cli @angular/core @angular/material --force

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         },
         "baseUrl": "./",
         "outDir": "./dist/out-tsc",
+        "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noImplicitOverride": true,
@@ -23,7 +24,6 @@
         "noFallthroughCasesInSwitch": true,
         "sourceMap": true,
         "declaration": false,
-        "downlevelIteration": true,
         "experimentalDecorators": true,
         "moduleResolution": "node",
         "importHelpers": true,
