--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "17.3.0",
-        "@angular/cdk": "17.3.0",
-        "@angular/common": "17.3.0",
-        "@angular/compiler": "17.3.0",
-        "@angular/core": "17.3.0",
-        "@angular/forms": "17.3.0",
-        "@angular/material": "17.3.0",
-        "@angular/platform-browser": "17.3.0",
-        "@angular/platform-browser-dynamic": "17.3.0",
-        "@angular/router": "17.3.0",
+        "@angular/animations": "18.0.2",
+        "@angular/cdk": "18.0.2",
+        "@angular/common": "18.0.2",
+        "@angular/compiler": "18.0.2",
+        "@angular/core": "18.0.2",
+        "@angular/forms": "18.0.2",
+        "@angular/material": "18.0.2",
+        "@angular/platform-browser": "18.0.2",
+        "@angular/platform-browser-dynamic": "18.0.2",
+        "@angular/router": "18.0.2",
         "@js-joda/core": "5.5.3",
         "@js-joda/extra": "0.11.3",
         "@js-joda/locale": "4.8.10",
@@ -42,21 +42,21 @@
         "zone.js": "0.14.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "17.3.0",
-        "@angular-eslint/builder": "17.2.1",
-        "@angular-eslint/eslint-plugin": "17.2.1",
-        "@angular-eslint/eslint-plugin-template": "17.2.1",
-        "@angular-eslint/schematics": "17.2.1",
-        "@angular-eslint/template-parser": "17.2.1",
-        "@angular/cli": "17.3.0",
-        "@angular/compiler-cli": "17.3.0",
+        "@angular-devkit/build-angular": "18.0.3",
+        "@angular-eslint/builder": "18.0.1",
+        "@angular-eslint/eslint-plugin": "18.0.1",
+        "@angular-eslint/eslint-plugin-template": "18.0.1",
+        "@angular-eslint/schematics": "18.0.1",
+        "@angular-eslint/template-parser": "18.0.1",
+        "@angular/cli": "18.0.3",
+        "@angular/compiler-cli": "18.0.2",
         "@types/file-saver-es": "2.0.1",
         "@types/jasmine": "4.3.5",
-        "@typescript-eslint/eslint-plugin": "6.15.0",
-        "@typescript-eslint/parser": "6.15.0",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
         "concurrently": "8.2.1",
         "cross-env": "7.0.3",
-        "eslint": "8.56.0",
+        "eslint": "^8.57.0",
         "jasmine-core": "4.6.0",
         "karma": "6.4.2",
         "karma-chrome-launcher": "3.2.0",
@@ -64,10 +64,10 @@
         "karma-jasmine": "5.1.0",
         "karma-jasmine-html-reporter": "2.1.0",
         "karma-junit-reporter": "2.0.1",
-        "ng-packagr": "17.0.3",
+        "ng-packagr": "18.0.0",
         "prettier": "3.1.1",
         "prettier-config-standard": "7.0.0",
-        "typescript": "5.2.2"
+        "typescript": "5.4.5"
     },
     "overrides": {
         "deep-equal": {
