--- a/projects/ppwcode/ng-async/package.json
+++ b/projects/ppwcode/ng-async/package.json
@@ -4,7 +4,7 @@
     "peerDependencies": {
         "@angular/common": "^19.0.0",
         "@angular/core": "^19.0.0",
-        "@ngx-translate/core": "^15.0.0",
+        "@ngx-translate/core": "^15.0.0 || ^16.0.0",
         "file-saver-es": "^2.0.5",
         "@ppwcode/js-ts-oddsandends": "^1.4.2",
         "@ppwcode/ng-common-components": "^19.0.1"
