--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "concurrently": "8.2.1",
         "cross-env": "7.0.3",
         "eslint": "^9.15.0",
+        "eslint-plugin-no-secrets": "2.1.1",
         "jasmine-core": "4.6.0",
         "karma": "6.4.2",
         "karma-chrome-launcher": "3.2.0",
