--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "root": true,
     "ignorePatterns": ["projects/**/*"],
+    "extends": ["plugin:depend/recommended"],
     "overrides": [
         {
             "files": ["*.ts"],
