Add tsconfig.local.json so that manual overrides of the tsconfig paths is no longer necessary for development

--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,8 @@
                         "development": {
                             "optimization": false,
                             "extractLicenses": false,
-                            "sourceMap": true
+                            "sourceMap": true,
+                            "tsConfig": "tsconfig.local.json"
                         }
                     },
                     "defaultConfiguration": "production"
