Rename tsconfig.json to tsconfig.angular.json and tsconfig.local.json to tsconfig.json so that the IDE uses the relative paths by default instead of the build-paths

--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,7 @@
                             "optimization": false,
                             "extractLicenses": false,
                             "sourceMap": true,
-                            "tsConfig": "tsconfig.local.json"
+                            "tsConfig": "tsconfig.json"
                         }
                     },
                     "defaultConfiguration": "production"
