--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,17 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-        "paths": {
-            "@ppwcode/ng-async": ["dist/ppwcode/ng-async"],
-            "@ppwcode/ng-common": ["dist/ppwcode/ng-common"],
-            "@ppwcode/ng-common-components": ["dist/ppwcode/ng-common-components"],
-            "@ppwcode/ng-dialogs": ["dist/ppwcode/ng-dialogs"],
-            "@ppwcode/ng-forms": ["dist/ppwcode/ng-forms"],
-            "@ppwcode/ng-router": ["dist/ppwcode/ng-router"],
-            "@ppwcode/ng-state-management": ["dist/ppwcode/ng-state-management"],
-            "@ppwcode/ng-unit-testing": ["dist/ppwcode/ng-unit-testing"],
-            "@ppwcode/ng-wireframe": ["dist/ppwcode/ng-wireframe"]
-        },
-        "baseUrl": "./",
-        "outDir": "./dist/out-tsc",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "noImplicitOverride": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "sourceMap": true,
-        "declaration": false,
-        "experimentalDecorators": true,
-        "moduleResolution": "node",
-        "importHelpers": true,
-        "target": "ES2022",
-        "module": "ES2022",
-        "useDefineForClassFields": false,
-        "lib": ["ES2022", "dom"]
-    },
-    "angularCompilerOptions": {
-        "enableI18nLegacyMessageIdFormat": false,
-        "strictInjectionParameters": true,
-        "strictInputAccessModifiers": true,
-        "strictTemplates": true
-    }
+  "extends": "./tsconfig.app.json",
+  "compilerOptions": {
+      "paths": {
+          "@ppwcode/ng-async": ["projects/ppwcode/ng-async/src/public-api"],
+          "@ppwcode/ng-common": ["projects/ppwcode/ng-common/src/public-api"],
+          "@ppwcode/ng-common-components": ["projects/ppwcode/ng-common-components/src/public-api"],
+          "@ppwcode/ng-dialogs": ["projects/ppwcode/ng-dialogs/src/public-api"],
+          "@ppwcode/ng-forms": ["projects/ppwcode/ng-forms/src/public-api"],
+          "@ppwcode/ng-router": ["projects/ppwcode/ng-router/src/public-api"],
+          "@ppwcode/ng-state-management": ["projects/ppwcode/ng-state-management/src/public-api"],
+          "@ppwcode/ng-unit-testing": ["projects/ppwcode/ng-unit-testing/src/public-api"],
+          "@ppwcode/ng-wireframe": ["projects/ppwcode/ng-wireframe/src/public-api"]
+      }
+  }
 }
