--- a/projects/ppwcode/ng-common-components/package.json
+++ b/projects/ppwcode/ng-common-components/package.json
@@ -3,7 +3,8 @@
     "version": "19.0.3",
     "peerDependencies": {
         "@angular/common": "^19.0.0",
-        "@angular/core": "^19.0.0"
+        "@angular/core": "^19.0.0",
+        "@ppwcode/common": "^19.0.3"
     },
     "dependencies": {
         "tslib": "^2.3.0"
