--- a/projects/ppwcode/ng-common-components/package.json
+++ b/projects/ppwcode/ng-common-components/package.json
@@ -4,7 +4,7 @@
     "peerDependencies": {
         "@angular/common": "^19.0.0",
         "@angular/core": "^19.0.0",
-        "@ppwcode/common": "^19.1.0"
+        "@ppwcode/ng-common": "^19.1.0"
     },
     "dependencies": {
         "tslib": "^2.3.0"
