--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,9 @@
                           "@angular/material/prebuilt-themes/purple-green.css",
                           "src/styles.scss"
                         ],
+                        "stylePreprocessorOptions": {
+                            "includePaths": ["projects/ppwcode/ng-pds/src"]
+                        },
                         "scripts": []
                     }
                 },
@@ -471,6 +474,39 @@
               "options": {
                 "karmaConfig": "karma.conf.js",
                 "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.spec.json",
+                "polyfills": [
+                  "zone.js",
+                  "zone.js/testing"
+                ]
+              }
+            }
+          }
+        },
+        "@ppwcode/ng-pds": {
+          "projectType": "library",
+          "root": "projects/ppwcode/ng-pds",
+          "sourceRoot": "projects/ppwcode/ng-pds/src",
+          "prefix": "lib",
+          "architect": {
+            "build": {
+              "builder": "@angular-devkit/build-angular:ng-packagr",
+              "options": {
+                "project": "projects/ppwcode/ng-pds/ng-package.json"
+              },
+              "configurations": {
+                "production": {
+                  "tsConfig": "projects/ppwcode/ng-pds/tsconfig.lib.prod.json"
+                },
+                "development": {
+                  "tsConfig": "projects/ppwcode/ng-pds/tsconfig.lib.json"
+                }
+              },
+              "defaultConfiguration": "production"
+            },
+            "test": {
+              "builder": "@angular-devkit/build-angular:karma",
+              "options": {
+                "tsConfig": "projects/ppwcode/ng-pds/tsconfig.spec.json",
                 "polyfills": [
                   "zone.js",
                   "zone.js/testing"
