--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
           "@ppwcode/ng-common-components": ["projects/ppwcode/ng-common-components/src/public-api"],
           "@ppwcode/ng-dialogs": ["projects/ppwcode/ng-dialogs/src/public-api"],
           "@ppwcode/ng-forms": ["projects/ppwcode/ng-forms/src/public-api"],
+          "@ppwcode/ng-pds": ["projects/ppwcode/ng-pds/src/public-api"],
           "@ppwcode/ng-router": ["projects/ppwcode/ng-router/src/public-api"],
           "@ppwcode/ng-state-management": ["projects/ppwcode/ng-state-management/src/public-api"],
           "@ppwcode/ng-unit-testing": ["projects/ppwcode/ng-unit-testing/src/public-api"],
