[19] -> [20] ng update @angular/core@20 @angular/cli@20

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
+    "esModuleInterop": true,
       "paths": {
           "@ppwcode/ng-async": ["projects/ppwcode/ng-async/src/public-api"],
           "@ppwcode/ng-common": ["projects/ppwcode/ng-common/src/public-api"],
