--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
             "prefix": "ppw",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:application",
+                    "builder": "@angular/build:application",
                     "options": {
                         "outputPath": "dist/ppwcode",
                         "index": "src/index.html",
@@ -61,7 +61,7 @@
                     "defaultConfiguration": "production"
                 },
                 "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "builder": "@angular/build:dev-server",
                     "configurations": {
                         "production": {
                           "buildTarget": "ppwcode:build:production"
@@ -73,13 +73,13 @@
                     "defaultConfiguration": "development"
                 },
                 "extract-i18n": {
-                    "builder": "@angular-devkit/build-angular:extract-i18n",
+                    "builder": "@angular/build:extract-i18n",
                     "options": {
                       "buildTarget": "ppwcode:build"
                     }
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "polyfills": [
@@ -117,7 +117,7 @@
             "prefix": "ppw",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-async/ng-package.json"
                     },
@@ -132,7 +132,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-async/tsconfig.spec.json",
@@ -160,7 +160,7 @@
             "prefix": "ppw",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-common/ng-package.json"
                     },
@@ -175,7 +175,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-common/tsconfig.spec.json",
@@ -203,7 +203,7 @@
             "prefix": "ppw",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-wireframe/ng-package.json"
                     },
@@ -218,7 +218,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-wireframe/tsconfig.spec.json",
@@ -246,7 +246,7 @@
             "prefix": "lib",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-router/ng-package.json"
                     },
@@ -261,7 +261,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-router/tsconfig.spec.json",
@@ -289,7 +289,7 @@
             "prefix": "lib",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-state-management/ng-package.json"
                     },
@@ -304,7 +304,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-state-management/tsconfig.spec.json",
@@ -332,7 +332,7 @@
             "prefix": "lib",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-dialogs/ng-package.json"
                     },
@@ -347,7 +347,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-dialogs/tsconfig.spec.json",
@@ -375,7 +375,7 @@
             "prefix": "lib",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:ng-packagr",
+                    "builder": "@angular/build:ng-packagr",
                     "options": {
                         "project": "projects/ppwcode/ng-forms/ng-package.json"
                     },
@@ -390,7 +390,7 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
                         "tsConfig": "projects/ppwcode/ng-forms/tsconfig.spec.json",
@@ -418,7 +418,7 @@
           "prefix": "lib",
           "architect": {
             "build": {
-              "builder": "@angular-devkit/build-angular:ng-packagr",
+              "builder": "@angular/build:ng-packagr",
               "options": {
                 "project": "projects/ppwcode/ng-common-components/ng-package.json"
               },
@@ -433,7 +433,7 @@
               "defaultConfiguration": "production"
             },
             "test": {
-              "builder": "@angular-devkit/build-angular:karma",
+              "builder": "@angular/build:karma",
               "options": {
                 "karmaConfig": "karma.conf.js",
                 "tsConfig": "projects/ppwcode/ng-common-components/tsconfig.spec.json",
@@ -452,7 +452,7 @@
           "prefix": "lib",
           "architect": {
             "build": {
-              "builder": "@angular-devkit/build-angular:ng-packagr",
+              "builder": "@angular/build:ng-packagr",
               "options": {
                 "project": "projects/ppwcode/ng-unit-testing/ng-package.json"
               },
@@ -467,7 +467,7 @@
               "defaultConfiguration": "production"
             },
             "test": {
-              "builder": "@angular-devkit/build-angular:karma",
+              "builder": "@angular/build:karma",
               "options": {
                 "karmaConfig": "karma.conf.js",
                 "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.spec.json",
@@ -482,5 +482,31 @@
     },
     "cli": {
       "analytics": false
+    },
+    "schematics": {
+      "@schematics/angular:component": {
+        "type": "component"
+      },
+      "@schematics/angular:directive": {
+        "type": "directive"
+      },
+      "@schematics/angular:service": {
+        "type": "service"
+      },
+      "@schematics/angular:guard": {
+        "typeSeparator": "."
+      },
+      "@schematics/angular:interceptor": {
+        "typeSeparator": "."
+      },
+      "@schematics/angular:module": {
+        "typeSeparator": "."
+      },
+      "@schematics/angular:pipe": {
+        "typeSeparator": "."
+      },
+      "@schematics/angular:resolver": {
+        "typeSeparator": "."
+      }
     }
 }
