--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "19.0.0",
+        "@angular/animations": "20.2.0",
         "@angular/cdk": "19.0.0",
-        "@angular/common": "19.0.0",
-        "@angular/compiler": "19.0.0",
-        "@angular/core": "19.0.0",
-        "@angular/forms": "19.0.0",
+        "@angular/common": "20.2.0",
+        "@angular/compiler": "20.2.0",
+        "@angular/core": "20.2.0",
+        "@angular/forms": "20.2.0",
         "@angular/material": "19.0.0",
-        "@angular/platform-browser": "19.0.0",
-        "@angular/platform-browser-dynamic": "19.0.0",
-        "@angular/router": "19.0.0",
+        "@angular/platform-browser": "20.2.0",
+        "@angular/platform-browser-dynamic": "20.2.0",
+        "@angular/router": "20.2.0",
         "@js-joda/core": "5.6.3",
         "@js-joda/extra": "0.12.1",
         "@js-joda/locale": "4.14.1",
@@ -42,21 +42,21 @@
         "zone.js": "0.15.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "19.0.2",
         "@angular-eslint/builder": "18.4.2",
         "@angular-eslint/eslint-plugin": "18.4.2",
         "@angular-eslint/eslint-plugin-template": "18.4.2",
         "@angular-eslint/schematics": "18.4.2",
         "@angular-eslint/template-parser": "18.4.2",
-        "@angular/cli": "19.0.2",
-        "@angular/compiler-cli": "19.0.0",
+        "@angular/build": "^20.1.6",
+        "@angular/cli": "20.1.6",
+        "@angular/compiler-cli": "20.2.0",
         "@types/file-saver-es": "2.0.1",
         "@types/jasmine": "4.3.5",
-        "@typescript-eslint/eslint-plugin": "^8.16.0",
-        "@typescript-eslint/parser": "^8.16.0",
+        "@typescript-eslint/eslint-plugin": "8.16.0",
+        "@typescript-eslint/parser": "8.16.0",
         "concurrently": "8.2.1",
         "cross-env": "7.0.3",
-        "eslint": "^9.15.0",
+        "eslint": "9.15.0",
         "eslint-plugin-depend": "0.12.0",
         "eslint-plugin-no-secrets": "2.1.1",
         "jasmine-core": "4.6.0",
@@ -66,11 +66,11 @@
         "karma-jasmine": "5.1.0",
         "karma-jasmine-html-reporter": "2.1.0",
         "karma-junit-reporter": "2.0.1",
-        "ng-packagr": "19.0.1",
+        "ng-packagr": "20.2.0",
         "prettier": "3.1.1",
         "prettier-config-standard": "7.0.0",
         "retire": "5.2.5",
-        "typescript": "5.6.3"
+        "typescript": "5.8.3"
     },
     "overrides": {
         "deep-equal": {
