[19] -> [20] Upgrade ngx-translate

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "@js-joda/extra": "0.12.3",
         "@js-joda/locale": "4.15.2",
         "@js-joda/timezone": "2.22.0",
-        "@ngx-translate/core": "16.0.3",
-        "@ngx-translate/http-loader": "16.0.0",
+        "@ngx-translate/core": "17.0.0",
+        "@ngx-translate/http-loader": "17.0.0",
         "@ppwcode/js-ts-oddsandends": "1.4.2",
         "@types/luxon": "3.7.1",
         "date-fns": "2.30.0",
@@ -53,6 +53,7 @@
         "@angular/compiler-cli": "20.2.0",
         "@types/file-saver-es": "2.0.1",
         "@types/jasmine": "4.3.5",
+        "@types/node": "22.13.14",
         "@typescript-eslint/eslint-plugin": "8.16.0",
         "@typescript-eslint/parser": "8.16.0",
         "concurrently": "8.2.1",
