--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "@angular-eslint/eslint-plugin-template": "20.1.1",
         "@angular-eslint/schematics": "20.1.1",
         "@angular-eslint/template-parser": "20.1.1",
-        "@angular/build": "^20.1.6",
+        "@angular/build": "20.2.0",
         "@angular/cli": "20.1.6",
         "@angular/compiler-cli": "20.2.0",
         "@types/file-saver-es": "2.0.1",
