--- a/.github/workflows/publish-npmjs.yaml
+++ b/.github/workflows/publish-npmjs.yaml
@@ -15,6 +15,12 @@ jobs:
                   cache: 'npm'
                   registry-url: 'https://registry.npmjs.org'
             - run: npm run ci:check-production-vulnerabilities
+            - name: Cache node modules
+              uses: actions/cache@v3
+              with:
+                  path: node_modules
+                  key: node_modules-${{hashFiles('package-lock.json')}} # Cache based on package-lock.json
+                  restore-keys: node_modules- # Take any latest cache if failed to find it for current package-lock.json
             - run: npm install
             - run: npm run ci:lint
             - run: npm run ci:build-libs
