[20->21] Switch to zoneless

--- a/angular.json
+++ b/angular.json
@@ -21,9 +21,6 @@
                         "outputPath": "dist/ppwcode",
                         "index": "src/index.html",
                         "browser": "src/main.ts",
-                        "polyfills": [
-                            "zone.js"
-                        ],
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
@@ -85,10 +82,6 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ],
                         "tsConfig": "tsconfig.spec.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
@@ -138,11 +131,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-async/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-async/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -181,11 +170,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-common/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-common/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -224,11 +209,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-wireframe/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-wireframe/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -267,11 +248,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-router/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-router/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -310,11 +287,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-state-management/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-state-management/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -353,11 +326,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-dialogs/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-dialogs/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -396,11 +365,7 @@
                     "builder": "@angular/build:karma",
                     "options": {
                         "karmaConfig": "karma.conf.js",
-                        "tsConfig": "projects/ppwcode/ng-forms/tsconfig.spec.json",
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ]
+                        "tsConfig": "projects/ppwcode/ng-forms/tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -439,11 +404,7 @@
               "builder": "@angular/build:karma",
               "options": {
                 "karmaConfig": "karma.conf.js",
-                "tsConfig": "projects/ppwcode/ng-common-components/tsconfig.spec.json",
-                "polyfills": [
-                  "zone.js",
-                  "zone.js/testing"
-                ]
+                "tsConfig": "projects/ppwcode/ng-common-components/tsconfig.spec.json"
               }
             }
           }
@@ -473,11 +434,7 @@
               "builder": "@angular/build:karma",
               "options": {
                 "karmaConfig": "karma.conf.js",
-                "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.spec.json",
-                "polyfills": [
-                  "zone.js",
-                  "zone.js/testing"
-                ]
+                "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.spec.json"
               }
             }
           }
