[20->21] Switch unit testing from Karma to Vitest

--- a/angular.json
+++ b/angular.json
@@ -79,20 +79,10 @@
                     }
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
-                        "tsConfig": "tsconfig.spec.json",
-                        "inlineStyleLanguage": "scss",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
-                        "styles": [
-                            "@angular/material/prebuilt-themes/purple-green.css",
-                            "src/styles.scss"
-                        ],
-                        "scripts": []
+                        "runnerConfig": "vitest.config.ts",
+                        "tsConfig": "tsconfig.spec.json"
                     }
                 },
                 "lint": {
@@ -128,9 +118,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-async/tsconfig.spec.json"
                     }
                 },
@@ -167,9 +157,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-common/tsconfig.spec.json"
                     }
                 },
@@ -206,9 +196,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-wireframe/tsconfig.spec.json"
                     }
                 },
@@ -245,9 +235,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-router/tsconfig.spec.json"
                     }
                 },
@@ -284,9 +274,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-state-management/tsconfig.spec.json"
                     }
                 },
@@ -323,9 +313,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-dialogs/tsconfig.spec.json"
                     }
                 },
@@ -362,9 +352,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-forms/tsconfig.spec.json"
                     }
                 },
@@ -401,9 +391,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-common-components/tsconfig.spec.json"
                     }
                 }
@@ -431,9 +421,9 @@
                     "defaultConfiguration": "production"
                 },
                 "test": {
-                    "builder": "@angular/build:karma",
+                    "builder": "@angular/build:unit-test",
                     "options": {
-                        "karmaConfig": "karma.conf.js",
+                        "runnerConfig": "vitest.config.ts",
                         "tsConfig": "projects/ppwcode/ng-unit-testing/tsconfig.spec.json"
                     }
                 }
