--- a/projects/ppwcode/ng-router/tsconfig.spec.json
+++ b/projects/ppwcode/ng-router/tsconfig.spec.json
@@ -3,9 +3,7 @@
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    "types": ["vitest/globals"]
   },
   "include": [
     "**/*.spec.ts",
