--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,7 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "node",
-      "jasmine"
+      "vitest/globals"
     ]
   },
   "include": [
