[20 -> 21] Enforce ChangeDetectionStrategy.OnPush

--- a/angular.json
+++ b/angular.json
@@ -510,6 +510,11 @@
       },
       "@schematics/angular:resolver": {
         "typeSeparator": "."
+      },
+      "@schematics/angular": {
+        "component": {
+          "changeDetection": "OnPush"
+        }
       }
     }
 }
