--- a/projects/ppwcode/ng-common-components/package.json
+++ b/projects/ppwcode/ng-common-components/package.json
@@ -7,7 +7,8 @@
     "peerDependencies": {
         "@angular/common": "^21.0.2",
         "@angular/core": "^21.0.2",
-        "@ppwcode/ng-common": "^21.0.0"
+        "@ppwcode/ng-common": "^21.0.0",
+        "@ppwcode/ng-utils": "^21.0.0"
     },
     "dependencies": {
         "tslib": "^2.3.0"
