--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,9 +29,7 @@
                         "style": "kebab-case"
                     }
                 ],
-                "@angular-eslint/prefer-on-push-component-change-detection": [
-                    "error"
-                ],
+                "@angular-eslint/prefer-on-push-component-change-detection": ["error"],
                 "no-secrets/no-secrets": ["error", { "tolerance": 4.3 }]
             }
         },
