--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "scripts": {
         "start": "ng serve",
         "start:remote": "ng serve --host 0.0.0.0",
+        "format": "oxfmt",
+        "format:check": "oxfmt --check",
         "lint:prettier": "cross-env prettier --check \"**/*.{ts,js,md,html,scss}\"",
         "format:prettier": "cross-env prettier --write \"**/*.{ts,js,md,html,scss}\"",
         "lint:lint": "ng lint",
